  * Added support for 'executinglinedisplay' and 'selectedlinedisplay'
    configuration options. See documentation for full explanation.
    This allows you to configure how CGDB displays both the currently
    executing line and the currently selected line.
    The default for executing line is set to longarrow.
    The default for selected line is set to block.

    The 'arrowstyle' option has been deprecated (but still supported)
    and users should use the 'executinglinedisplay' option instead.

cgdb-0.6.8 (11/13/2014)

  * Fix issue #40, the map commands were adding additional new lines
    to the mappings. For instance, 'imap a b' in the ~/.cgdb/cgdbrc
    file would cause a to map to 'b<cr>' instead of just 'b'.

  * Added feature from issue #29, added 'until' command to CGDB.
  
  * Updated autotools configuration files to satisfy warnings and
    recommendations produced by autotools when run.

  * Fix issue #49, a gcc compiler warning.

  * Fixed a hang consuming 100% CPU usage on OS X Mavericks (github #48).

  * Fixed a hang when quitting cgdb while inferior is running
    (github #1 and #5 and #46). This was believed to be fixed in the last
    release but I've finally reproduced the issue and fixed it for good.

cgdb-0.6.7 (01/14/2013)

  * Changed documentation license from GFDL to GPL (github #6).

  * Fixed a hang on MacOS when quitting cgdb while inferior is running
    (github #1 and #5).

  * Fixed a crash when pressing 'n' in source window (github #5).

  * Fixed a bug opening files (and toggling breakpoints in files) with
    special characters (e.g. space) in their names.

cgdb-0.6.6 (09/06/2011)

  * Fixed a compile error on Cygwin 1.7 (signature for path conversion
    functions changed).

  * Fixed a segfault on 64-bit systems in rline.c due to a missing
    prototype of cgdb_malloc. Thanks to Pietro Cerutti for reporting
    and diagnosing this one!

  * Fixed a bug in the file dialog. When searching for a file,